--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,8 +1,8 @@
 <p>&#169; Dylan Fry 2025</p>
 
 <ul>
-    <li><a href="../pages/index.html">Home</a></li>
-    <li><a href="../pages/projects.html">Projects</a></li>
-    <li><a href="../pages/skills.html">Skills</a></li>
-    <li><a href="../pages/contact.html">Contact</a></li>
+    <li><a href="..//index.html">Home</a></li>
+    <li><a href="..//projects.html">Projects</a></li>
+    <li><a href="..//skills.html">Skills</a></li>
+    <li><a href="..//contact.html">Contact</a></li>
 </ul>
