--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,7 +1,7 @@
 <ul class="items">
-	<li><a href="../pages/index.html">About</a></li>
-	<li><a href="../pages/skills.html">Skills</a></li>
+	<li><a href="..//index.html">About</a></li>
+	<li><a href="..//skills.html">Skills</a></li>
 	<img class="logo" src="../assets/images/logo.svg" alt="Logo">
-	<li><a href="../pages/projects.html">Projects</a></li>
-	<li><a href="../pages/review.html">Review</a></li>
+	<li><a href="..//projects.html">Projects</a></li>
+	<li><a href="..//review.html">Review</a></li>
 </ul>
