--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -4,5 +4,5 @@
     <li><a href="..//index.html">Home</a></li>
     <li><a href="..//projects.html">Projects</a></li>
     <li><a href="..//skills.html">Skills</a></li>
-    <li><a href="..//contact.html">Contact</a></li>
+    <li><a href="..//review.html">Review</a></li>
 </ul>
